--- a/public/index.html
+++ b/public/index.html
@@ -145,49 +145,83 @@
                 </div>
             </div>
 
-            <!-- Second Row - External Services Status -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-                <!-- Prometheus Card -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6">
-                    <div class="flex items-center justify-between mb-4">
-                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white" data-i18n="cards.prometheus.title">Prometheus</h3>
-                        <i class="fas fa-fire text-2xl text-orange-600"></i>
+            <!-- VictoriaMetrics Database Info -->
+            <div class="bg-gradient-to-r from-indigo-50 to-blue-50 dark:from-gray-800 dark:to-gray-700 rounded-lg shadow p-6 mb-6 border-l-4 border-indigo-600">
+                <div class="flex items-start justify-between mb-4">
+                    <div>
+                        <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
+                            <i class="fas fa-chart-area text-indigo-600 mr-2"></i>VictoriaMetrics Database
+                        </h3>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">Primary time-series database for IoT sensor data</p>
                     </div>
-                    <div class="space-y-2">
+                    <span class="px-3 py-1 bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 text-xs font-semibold rounded-full">
+                        <i class="fas fa-check-circle mr-1"></i>ACTIVE
+                    </span>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">HTTP API Endpoint</label>
                         <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.prometheus.connection">Connection</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="prometheus-status">-</span>
+                            <code class="text-sm text-indigo-600 dark:text-indigo-400">http://localhost:8428</code>
+                            <button onclick="navigator.clipboard.writeText('http://localhost:8428')" class="text-gray-400 hover:text-indigo-600">
+                                <i class="fas fa-copy"></i>
+                            </button>
                         </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.prometheus.metrics">Metrics</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="prometheus-metrics">-</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.prometheus.lastScrape">Last Scrape</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="prometheus-scrape">-</span>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">Connection Status</label>
+                        <div class="flex items-center">
+                            <span class="text-sm font-medium" id="victoria-status">-</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- VictoriaMetrics Card -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6">
-                    <div class="flex items-center justify-between mb-4">
-                        <h3 class="text-lg font-semibold text-gray-900 dark:text-white" data-i18n="cards.victoria.title">VictoriaMetrics</h3>
-                        <i class="fas fa-chart-area text-2xl text-indigo-600"></i>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Total Metrics</label>
+                        <p class="text-2xl font-bold text-indigo-600">1.7M+</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">From 11 sensors</p>
                     </div>
-                    <div class="space-y-2">
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.victoria.connection">Connection</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="victoria-status">-</span>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Date Range</label>
+                        <p class="text-sm font-semibold text-gray-700 dark:text-gray-300">Oct 1 - Nov 11, 2025</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">41 days of data</p>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Query Engine</label>
+                        <p class="text-sm font-medium" id="victoria-query">MetricsQL</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">Prometheus-compatible</p>
+                    </div>
+                </div>
+
+                <div class="bg-white dark:bg-gray-900 rounded-md p-4 mb-4">
+                    <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">Available Metrics</label>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">battery_voltage_mv</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">clamp_current_amperes</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">temperature_celsius</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">humidity_percent</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">light_lux</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">movement</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">noise_avg_db</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">noise_peak_db</span>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Available Ports</label>
+                        <div class="flex flex-wrap gap-2 mt-2">
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">8428 (HTTP)</span>
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">8089 (InfluxDB)</span>
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">2003 (Graphite)</span>
                         </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.victoria.queryEngine">Query Engine</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="victoria-query">MetricsQL</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cards.victoria.storage">Storage</span>
-                            <span class="text-sm font-medium dark:text-gray-300" id="victoria-storage">-</span>
-                        </div>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Storage Info</label>
+                        <p class="text-sm font-medium" id="victoria-storage">-</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Retention: 12 months</p>
                     </div>
                 </div>
             </div>
@@ -293,6 +327,73 @@
 
                 <div id="connectionResult" class="mt-4 hidden">
                     <!-- Connection test result will appear here -->
+                </div>
+            </div>
+
+            <!-- VictoriaMetrics Connection Info -->
+            <div class="bg-gradient-to-r from-indigo-50 to-blue-50 dark:from-gray-800 dark:to-gray-700 rounded-lg shadow p-6 mb-6 border-l-4 border-indigo-600">
+                <div class="flex items-start justify-between mb-4">
+                    <div>
+                        <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">
+                            <i class="fas fa-chart-area text-indigo-600 mr-2"></i>VictoriaMetrics Database
+                        </h3>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">Primary time-series database for IoT sensor data</p>
+                    </div>
+                    <span class="px-3 py-1 bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 text-xs font-semibold rounded-full">
+                        <i class="fas fa-check-circle mr-1"></i>ACTIVE
+                    </span>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">HTTP API Endpoint</label>
+                        <div class="flex items-center justify-between">
+                            <code class="text-sm text-indigo-600 dark:text-indigo-400">http://localhost:8428</code>
+                            <button onclick="navigator.clipboard.writeText('http://localhost:8428')" class="text-gray-400 hover:text-indigo-600">
+                                <i class="fas fa-copy"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">Available Ports</label>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">8428 (HTTP)</span>
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">8089 (InfluxDB)</span>
+                            <span class="px-2 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-700 dark:text-indigo-300 text-xs rounded">2003 (Graphite)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Total Metrics</label>
+                        <p class="text-2xl font-bold text-indigo-600">1.7M+</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">From 11 sensors</p>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Date Range</label>
+                        <p class="text-sm font-semibold text-gray-700 dark:text-gray-300">Oct 1 - Nov 11, 2025</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">41 days of data</p>
+                    </div>
+                    <div class="bg-white dark:bg-gray-900 rounded-md p-4">
+                        <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-1">Retention Period</label>
+                        <p class="text-2xl font-bold text-indigo-600">12</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">months</p>
+                    </div>
+                </div>
+
+                <div class="bg-white dark:bg-gray-900 rounded-md p-4 mb-4">
+                    <label class="block text-xs font-semibold text-gray-500 dark:text-gray-400 mb-2">Available Metrics</label>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">battery_voltage_mv</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">clamp_current_amperes</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">temperature_celsius</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">humidity_percent</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">light_lux</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">movement</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">noise_avg_db</span>
+                        <span class="px-2 py-1 bg-gray-100 dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-xs rounded font-mono">noise_peak_db</span>
+                    </div>
                 </div>
             </div>
 
