--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,7 @@
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Report Type</label>
                         <select id="reportType" class="w-full rounded-md border-gray-300 dark:border-gray-700 dark:bg-gray-900 dark:text-white shadow-sm focus:border-blue-500 focus:ring-blue-500">
                             <option value="hotspots-coldzones">Hotspots and Cold Zones (Temperature Analysis)</option>
+                            <option value="power-consumption">Power Consumption Analysis</option>
                             <option value="test-template">Test Template (report_test.svg)</option>
                             <option value="iot-summary">IoT Summary Report</option>
                             <option value="sensor-detailed">Sensor Detailed Report</option>
