feat: add localized report templates

--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,7 @@
                         <select id="reportType" class="w-full rounded-md border-gray-300 dark:border-gray-700 dark:bg-gray-900 dark:text-white shadow-sm focus:border-blue-500 focus:ring-blue-500">
                             <option value="hotspots-coldzones">Hotspots and Cold Zones (Temperature Analysis)</option>
                             <option value="power-consumption">Power Consumption Analysis</option>
+                            <option value="sound-analysis">Sound Levels - Noise Pollution Analysis</option>
                             <option value="test-template">Test Template (report_test.svg)</option>
                             <option value="iot-summary">IoT Summary Report</option>
                             <option value="sensor-detailed">Sensor Detailed Report</option>
