--- a/public/index.html
+++ b/public/index.html
@@ -20,25 +20,26 @@
 </head>
 <body class="bg-gray-50 dark:bg-gray-900">
     <!-- Header -->
-    <header class="bg-white dark:bg-gray-800 shadow-sm">
+    <header class="shadow-sm" style="background-color: var(--header-bg); backdrop-filter: blur(10px); border-bottom: 1px solid var(--border-subtle);">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
-                    <i class="fas fa-chart-line text-blue-600 text-3xl mr-3"></i>
+                    <img src="/images/logo_madison.png" alt="Madison Logo" class="mr-4" style="height: 87.36px; filter: brightness(1.1) contrast(1.1);">
+                    <i class="fas fa-chart-line text-3xl mr-3" style="color: var(--primary-light);"></i>
                     <div>
-                        <h1 class="text-2xl font-bold text-gray-900 dark:text-white" data-i18n="header.title">Tidop IoT Report Utils</h1>
-                        <p class="text-sm text-gray-500 dark:text-gray-400" data-i18n="header.subtitle">Configuration &amp; Management</p>
+                        <h1 class="text-2xl font-bold" style="color: var(--text-primary);" data-i18n="header.title">IoT Report Generation</h1>
+                        <p class="text-sm" style="color: var(--text-secondary);" data-i18n="header.subtitle">Configuration &amp; Management</p>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
                     <div class="flex items-center space-x-2">
                         <span class="status-dot" id="systemStatus"></span>
-                        <span class="text-sm font-medium dark:text-gray-300" id="systemStatusText">Checking...</span>
+                        <span class="text-sm font-medium" style="color: var(--text-primary);" id="systemStatusText">Checking...</span>
                     </div>
-                    <button id="theme-toggle" class="px-4 py-2 bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-md hover:bg-gray-300 dark:hover:bg-gray-600">
+                    <button id="theme-toggle" class="px-4 py-2 rounded-md" style="background-color: var(--card-bg); color: var(--primary); border: 1px solid var(--border-medium); transition: all 0.2s ease;">
                         <i id="theme-toggle-icon" class="fas fa-sun"></i>
                     </button>
-                    <button id="settings-toggle" onclick="toggleSettingsDrawer()" class="px-4 py-2 bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-md hover:bg-gray-300 dark:hover:bg-gray-600">
+                    <button id="settings-toggle" onclick="toggleSettingsDrawer()" class="px-4 py-2 rounded-md" style="background-color: var(--card-bg); color: var(--primary); border: 1px solid var(--border-medium); transition: all 0.2s ease;">
                         <i class="fas fa-cog"></i>
                     </button>
                 </div>
@@ -47,14 +48,14 @@
     </header>
 
     <!-- Settings Drawer -->
-    <div id="settings-drawer" class="fixed inset-y-0 right-0 w-80 bg-white dark:bg-gray-800 shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out z-50">
+    <div id="settings-drawer" class="fixed inset-y-0 right-0 w-80 shadow-2xl transform translate-x-full transition-transform duration-300 ease-in-out z-50" style="background-color: var(--drawer-bg); backdrop-filter: blur(20px); border-left: 2px solid var(--border-medium);">
         <div class="flex flex-col h-full">
             <!-- Drawer Header -->
-            <div class="flex items-center justify-between px-6 py-4 border-b border-gray-200 dark:border-gray-700">
-                <h2 class="text-lg font-semibold text-gray-900 dark:text-white">
-                    <i class="fas fa-cog mr-2"></i>Settings
+            <div class="flex items-center justify-between px-6 py-4" style="border-bottom: 1px solid var(--border-medium);">
+                <h2 class="text-lg font-semibold" style="color: var(--text-primary);">
+                    <i class="fas fa-cog mr-2" style="color: var(--primary);"></i>Settings
                 </h2>
-                <button onclick="toggleSettingsDrawer()" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200">
+                <button onclick="toggleSettingsDrawer()" class="hover:opacity-80 transition-opacity" style="color: var(--text-secondary);">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
@@ -63,13 +64,13 @@
             <div class="flex-1 overflow-y-auto px-6 py-4 space-y-6">
                 <!-- Language Settings -->
                 <div>
-                    <h3 class="text-sm font-medium text-gray-700 dark:text-gray-300 mb-3">
-                        <i class="fas fa-language mr-2"></i>Language
+                    <h3 class="text-sm font-medium mb-3" style="color: var(--text-primary);">
+                        <i class="fas fa-language mr-2" style="color: var(--primary);"></i>Language
                     </h3>
-                    <div class="flex items-center bg-gray-100 dark:bg-gray-700 rounded-md px-3 py-2">
+                    <div class="flex items-center rounded-md px-3 py-2" style="background-color: var(--input-bg); border: 1px solid var(--border-subtle);">
                         <span id="languageFlag" class="text-lg mr-2" aria-hidden="true">🇪🇸</span>
                         <label for="languageSelector" class="sr-only">Language</label>
-                        <select id="languageSelector" class="bg-transparent border-none focus:ring-0 text-sm font-medium text-gray-700 dark:text-gray-200 w-full">
+                        <select id="languageSelector" class="bg-transparent border-none focus:ring-0 text-sm font-medium w-full" style="color: var(--text-primary);">
                             <option value="es">Español</option>
                             <option value="en">English</option>
                         </select>
@@ -78,10 +79,10 @@
 
                 <!-- Health Check Settings -->
                 <div>
-                    <h3 class="text-sm font-medium text-gray-700 dark:text-gray-300 mb-3">
-                        <i class="fas fa-heartbeat mr-2"></i>System Health
+                    <h3 class="text-sm font-medium mb-3" style="color: var(--text-primary);">
+                        <i class="fas fa-heartbeat mr-2" style="color: var(--accent-success);"></i>System Health
                     </h3>
-                    <button onclick="checkHealth()" class="w-full px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">
+                    <button onclick="checkHealth()" class="w-full px-4 py-2 rounded-md hover:brightness-110 transition-all" style="background: linear-gradient(135deg, rgba(212, 184, 150, 0.2) 0%, rgba(212, 184, 150, 0.1) 100%); color: var(--primary); border: 1px solid var(--border-medium);">
                         <i class="fas fa-sync-alt mr-2"></i><span data-i18n="button.refresh">Refresh Health Status</span>
                     </button>
                 </div>
@@ -210,13 +211,9 @@
                     <div>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Report Type</label>
                         <select id="reportType" class="w-full rounded-md border-gray-300 dark:border-gray-700 dark:bg-gray-900 dark:text-white shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                            <option value="hotspots-coldzones">Hotspots and Cold Zones (Temperature Analysis)</option>
+                            <option value="hotspots-coldzones">Temperature Analysis</option>
                             <option value="power-consumption">Power Consumption Analysis</option>
-                            <option value="sound-analysis">Sound Levels - Noise Pollution Analysis</option>
-                            <option value="test-template">Test Template (report_test.svg)</option>
-                            <option value="iot-summary">IoT Summary Report</option>
-                            <option value="sensor-detailed">Sensor Detailed Report</option>
-                            <option value="building">Building Report</option>
+                            <option value="sound-analysis">Sound Levels Analysis</option>
                         </select>
                     </div>
                     <div>
@@ -236,13 +233,6 @@
                     <div>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">End Date</label>
                         <input type="date" id="reportEndDate" class="w-full rounded-md border-gray-300 dark:border-gray-700 dark:bg-gray-900 dark:text-white shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                    </div>
-                </div>
-
-                <div id="sensorSelection">
-                    <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Select Sensors (Optional)</label>
-                    <div id="sensorCheckboxes" class="grid grid-cols-1 md:grid-cols-3 gap-2 max-h-64 overflow-y-auto p-4 border rounded-md dark:border-gray-700">
-                        <!-- Sensor checkboxes will be loaded here -->
                     </div>
                 </div>
 
@@ -548,9 +538,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700 mt-12">
+    <footer class="mt-12" style="background-color: var(--header-bg); border-top: 1px solid var(--border-subtle); backdrop-filter: blur(10px);">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
-            <p class="text-center text-gray-500 dark:text-gray-400 text-sm">
+            <p class="text-center text-sm" style="color: var(--text-secondary);">
                 Tidop IoT Report Utils v1.0.0 - Built with ❤️ for IoT Analytics
             </p>
         </div>
